[gd_scene load_steps=49 format=3 uid="uid://bjp6ejpaigej7"]

[ext_resource type="Script" uid="uid://bbu4mpdkjgd2d" path="res://Scenes/RTShaderSetup.gd" id="1_brycl"]
[ext_resource type="Script" uid="uid://o5ihejxay20f" path="res://Scenes/base_scene.gd" id="1_ufl4h"]
[ext_resource type="Environment" uid="uid://dlcnan23lxmnk" path="res://Env/BaseSceneEnv.tres" id="2_eumj5"]
[ext_resource type="Script" uid="uid://bqdkfuj75n3k1" path="res://Scenes/camera_3d.gd" id="3_58y5n"]
[ext_resource type="Script" uid="uid://cqsq0fsclqigp" path="res://Scenes/ui.gd" id="4_yga4i"]
[ext_resource type="Script" uid="uid://b1hlplu1loihx" path="res://Classes/RtSphere.gd" id="5_4ksr6"]
[ext_resource type="Script" uid="uid://dvrx7f10s7xn8" path="res://Scenes/BasicSettings.gd" id="5_uc7fm"]
[ext_resource type="Script" uid="uid://bpx8ps4ke0nsq" path="res://Classes/RtCube.gd" id="7_56e3h"]

[sub_resource type="CompositorEffect" id="CompositorEffect_brycl"]
resource_local_to_scene = false
resource_name = ""
enabled = false
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = false
script = ExtResource("1_brycl")
UpdateShader = false
initialized = true
metadata/_custom_type_script = "uid://bbu4mpdkjgd2d"

[sub_resource type="Compositor" id="Compositor_ctfd7"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_brycl")])

[sub_resource type="CompositorEffect" id="CompositorEffect_yga4i"]
resource_local_to_scene = false
resource_name = ""
enabled = false
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = false
script = ExtResource("1_brycl")
UpdateShader = false
metadata/_custom_type_script = "uid://bbu4mpdkjgd2d"

[sub_resource type="Compositor" id="Compositor_4ksr6"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_yga4i")])

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eumj5"]
roughness = 0.0
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_sbiut"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_eumj5")
radius = 0.8
height = 1.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_orcbb"]
roughness = 0.0
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_hhixo"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_orcbb")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x613b"]
roughness = 0.5
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_ulyj0"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_x613b")
radius = 19.0
height = 38.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u5ctk"]
albedo_color = Color(1, 0, 1, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_1whss"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_u5ctk")
radius = 19.0
height = 38.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eo2kd"]
albedo_color = Color(0, 0.355487, 0.797517, 1)
roughness = 0.5
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_ib54o"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_eo2kd")
radius = 100.0
height = 200.0
rings = 256

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ygq3m"]
albedo_color = Color(0.932771, 0.663066, 0.43524, 1)
metallic = 1.0
roughness = 0.703
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_d7pus"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ygq3m")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gf2b2"]
metallic = 1.0
roughness = 0.0
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_85yrk"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_gf2b2")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gvcvg"]
metallic = 1.0
roughness = 0.0
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_41mr8"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_gvcvg")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wafdh"]
albedo_color = Color(0.780115, 0, 0.379405, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_gxglu"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_wafdh")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dhjy8"]
roughness = 0.982
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_fwf5d"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_dhjy8")
size = Vector3(5, 1, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s46ta"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_sg1u3"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_s46ta")
size = Vector3(5, 1, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tca0x"]
albedo_color = Color(0.8, 0.176471, 0.14902, 1)
roughness = 0.985
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_q1fcg"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_tca0x")
size = Vector3(1, 7, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ripiw"]
albedo_color = Color(0.0509804, 0.65098, 0.0941176, 1)
roughness = 0.958
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_37ykq"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ripiw")
size = Vector3(1, 7, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54hg7"]
albedo_color = Color(0.14902, 0.388235, 0.764706, 1)
roughness = 0.967
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_13a8i"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_54hg7")
size = Vector3(7, 7, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ihig1"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_kv0y4"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ihig1")
size = Vector3(7, 7, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fcmy5"]
roughness = 0.0
emission_enabled = true
emission = Color(1, 0.901961, 0.533333, 1)
emission_energy_multiplier = 56.0

[sub_resource type="BoxMesh" id="BoxMesh_di8lw"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_fcmy5")
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_km0pw"]
roughness = 0.0
emission_enabled = true
emission = Color(1, 0.901961, 0.533333, 1)
emission_energy_multiplier = 15.0

[sub_resource type="BoxMesh" id="BoxMesh_u5fsu"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_km0pw")
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ldbps"]
roughness = 0.0
emission_energy_multiplier = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_0kb32"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ldbps")
size = Vector3(1.5, 1.5, 1.5)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ufl4h")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_eumj5")
compositor = SubResource("Compositor_ctfd7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.605345, 7.82467)
environment = ExtResource("2_eumj5")
compositor = SubResource("Compositor_4ksr6")
fov = 45.0
near = 0.1
far = 100.0
script = ExtResource("3_58y5n")

[node name="UI" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_yga4i")

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera3D/UI/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Camera3D/UI/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="Camera3D/UI/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = ">"
metadata/_edit_use_anchors_ = true

[node name="Padding" type="Control" parent="Camera3D/UI/HBoxContainer"]
custom_minimum_size = Vector2(440, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/UI/HBoxContainer/Padding"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.545098)

[node name="ScrollContainer" type="ScrollContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer"]
layout_mode = 2

[node name="Main" type="VBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("5_uc7fm")

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/HBoxContainer"]
custom_minimum_size = Vector2(440, 31)
layout_mode = 2
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="Label" type="Label" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RenderLabel" type="Label" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
text = "Last Render: 10ms"

[node name="FPSLabel" type="Label" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
text = "FPS: 100"

[node name="AccumulateCheck" type="CheckBox" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
focus_mode = 1
button_pressed = true
text = "Accumulate"

[node name="VSyncCheck" type="CheckBox" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
focus_mode = 1
button_pressed = true
text = "V-Sync"

[node name="EnableRtx" type="CheckBox" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
focus_mode = 1
text = "Enable Ray-Tracing"

[node name="RaysPerPixelSlider" type="SpinBox" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
focus_mode = 1
min_value = 1.0
value = 1.0
suffix = "Ray(s) Per Pixel"

[node name="MaxBouncesSlider" type="SpinBox" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2
min_value = 1.0
max_value = 500.0
value = 5.0
suffix = "Max Bounce(s)"

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main"]
layout_mode = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
edit_alpha = false

[node name="Label" type="Label" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/HBoxContainer2"]
layout_mode = 2
text = "Sky Color"

[node name="ScrollContainer2" type="ScrollContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect"]
custom_minimum_size = Vector2(0, 540)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 540.0
offset_bottom = 1080.0
grow_horizontal = 2

[node name="SpherePropPanel" type="VBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer2/SpherePropPanel"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer2/SpherePropPanel/HBoxContainer"]
custom_minimum_size = Vector2(440, 31)
layout_mode = 2
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="Label" type="Label" parent="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer2/SpherePropPanel/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Scene Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BarResize" type="Control" parent="Camera3D/UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -2.5
offset_bottom = 2.5
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(220, 2.5)
mouse_default_cursor_shape = 9

[node name="ColorRect" type="ColorRect" parent="Camera3D/UI/BarResize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2

[node name="Spheres" type="Node3D" parent="."]

[node name="RtSphere" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.064065576, 0)
mesh = SubResource("SphereMesh_sbiut")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
radius = 0.8
roughness = 0.0
specular_probability = 1.0
is_glass = true
ior = 1.6
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere9" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00393063, 0.713891, -1.33551)
visible = false
mesh = SubResource("SphereMesh_hhixo")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
roughness = 0.0
specular_probability = 1.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere2" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 14, 0)
visible = false
mesh = SubResource("SphereMesh_ulyj0")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
radius = 19.0
emission_power = 5.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere7" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00252533, 14, -49.633)
visible = false
mesh = SubResource("SphereMesh_1whss")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
radius = 19.0
albedo = Color(1, 0, 1, 1)
roughness = 1.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere3" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -101, 0)
visible = false
mesh = SubResource("SphereMesh_ib54o")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
radius = 100.0
rings = 256
albedo = Color(0, 0.355487, 0.797517, 1)
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere4" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.213, -0.05, 0)
visible = false
mesh = SubResource("SphereMesh_d7pus")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
albedo = Color(0.932771, 0.663066, 0.43524, 1)
roughness = 0.703
metallic = 1.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere5" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0284338, -0.05, -3.58783)
visible = false
mesh = SubResource("SphereMesh_85yrk")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
roughness = 0.0
metallic = 1.0
specular_probability = 1.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere6" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.95064, -0.05, -0.0354992)
visible = false
mesh = SubResource("SphereMesh_41mr8")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
roughness = 0.0
metallic = 1.0
specular_probability = 0.395
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="RtSphere8" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47574, -0.05, 2.78533)
visible = false
mesh = SubResource("SphereMesh_gxglu")
skeleton = NodePath("../..")
script = ExtResource("5_4ksr6")
albedo = Color(0.780115, 0, 0.379405, 1)
roughness = 1.0
metadata/_custom_type_script = "uid://b1hlplu1loihx"

[node name="Cubes" type="Node3D" parent="."]

[node name="RtCube" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.99956, 0)
mesh = SubResource("BoxMesh_fwf5d")
script = ExtResource("7_56e3h")
size = Vector3(5, 1, 16)
roughness = 0.982
specular_probability = 0.036
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube4" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.00044, 0)
mesh = SubResource("BoxMesh_sg1u3")
script = ExtResource("7_56e3h")
size = Vector3(5, 1, 16)
roughness = 1.0
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube2" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.000443146, 0)
mesh = SubResource("BoxMesh_q1fcg")
script = ExtResource("7_56e3h")
size = Vector3(1, 7, 16)
albedo = Color(0.8, 0.176471, 0.14902, 1)
roughness = 0.985
specular_probability = 0.039
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube3" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.000443146, 0)
mesh = SubResource("BoxMesh_37ykq")
script = ExtResource("7_56e3h")
size = Vector3(1, 7, 16)
albedo = Color(0.0509804, 0.65098, 0.0941176, 1)
roughness = 0.958
emission_color = Color(0, 0, 0, 1)
specular_probability = 0.06
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube5" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
mesh = SubResource("BoxMesh_13a8i")
script = ExtResource("7_56e3h")
size = Vector3(7, 7, 1)
albedo = Color(0.14902, 0.388235, 0.764706, 1)
roughness = 0.967
emission_color = Color(0, 0, 0, 1)
specular_probability = 0.115
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube7" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.5)
mesh = SubResource("BoxMesh_kv0y4")
script = ExtResource("7_56e3h")
size = Vector3(7, 7, 1)
roughness = 1.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="ceillight" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5393, 0)
mesh = SubResource("BoxMesh_di8lw")
script = ExtResource("7_56e3h")
size = Vector3(1, 0.1, 1)
roughness = 0.0
emission_color = Color(1, 0.901961, 0.533333, 1)
emission_power = 56.0
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="floorLight" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.54191, 0)
visible = false
mesh = SubResource("BoxMesh_u5fsu")
script = ExtResource("7_56e3h")
size = Vector3(1, 0.1, 1)
roughness = 0.0
emission_color = Color(1, 0.901961, 0.533333, 1)
emission_power = 15.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[node name="RtCube8" type="MeshInstance3D" parent="Cubes"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -0.00054347515, -1.733, 0)
visible = false
mesh = SubResource("BoxMesh_0kb32")
script = ExtResource("7_56e3h")
size = Vector3(1.5, 1.5, 1.5)
roughness = 0.0
emission_color = Color(0, 0, 0, 1)
specular_probability = 1.0
ior = 1.6
is_glass = true
absorbtion_power = 0.0
metadata/_custom_type_script = "uid://bpx8ps4ke0nsq"

[connection signal="pressed" from="Camera3D/UI/HBoxContainer/VBoxContainer/Button" to="Camera3D/UI" method="_on_button_pressed"]
[connection signal="toggled" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/AccumulateCheck" to="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main" method="_on_accumulate_check_toggled"]
[connection signal="toggled" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/VSyncCheck" to="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main" method="_on_v_sync_check_toggled"]
[connection signal="toggled" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/EnableRtx" to="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main" method="_on_enable_rtx_toggled"]
[connection signal="value_changed" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/RaysPerPixelSlider" to="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main" method="_on_rays_per_pixel_slider_value_changed"]
[connection signal="value_changed" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/MaxBouncesSlider" to="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main" method="_on_max_bounces_slider_value_changed"]
[connection signal="color_changed" from="Camera3D/UI/HBoxContainer/Padding/ColorRect/ScrollContainer/VBoxContainer/Main/HBoxContainer2/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="gui_input" from="Camera3D/UI/BarResize" to="Camera3D/UI" method="_on_bar_resize_gui_input"]
